adaptive product page

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -867,8 +867,14 @@
   display: flex;
   justify-content: center;
 }
+.product_container .product_content .product-info .product-images .image-slider .slick-list .slick-slide div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .product_container .product_content .product-info .product-images .image-slider .slick-list .slick-slide div img {
   max-height: 540px;
+  max-width: 90%;
   padding: 20px 0;
 }
 .product_container .product_content .product-info .product-images .image-slider .slick-arrow {
@@ -2829,6 +2835,17 @@
   .row {
     width: 750px !important;
   }
+  .product_container .product_content .product-info {
+    flex-wrap: wrap;
+  }
+  .product_container .product_content .product-info .product-images {
+    width: 90%;
+    position: initial;
+  }
+  .product_container .product_content .product-info .product-details {
+    width: 100%;
+    margin: 40px 12px 0;
+  }
   .shop_container .products-block .header .header-block .sort-filter .filter-menu {
     display: block;
   }
@@ -2889,6 +2906,19 @@
   }
   .shop_container.row {
     width: 500px !important;
+  }
+  .product_content.row {
+    width: 540px !important;
+  }
+  .product_container .product_content .product-info .product-images {
+    width: 100%;
+    justify-content: center;
+  }
+  .product_container .product_content .product-info .product-images .image-slider {
+    width: 95%;
+  }
+  .product_container .product_content .product-info .product-images .gallery, .product_container .product_content .product-info .product-images .gallery-slider {
+    display: none;
   }
   .shop_container .products-block .products .card {
     width: 50%;
@@ -2961,9 +2991,37 @@
     background-color: rgba(255, 255, 255, 0.5);
   }
 }
+@media (max-width: 580px) {
+  .product_content.row {
+    width: 467px !important;
+  }
+  .product_container .product_content .product-info .product-details {
+    margin: 20px 12px 0;
+  }
+}
 @media (max-width: 500px) {
-  .row {
+  .row,
+  .product_content.row {
     width: 90% !important;
+  }
+  .product_container .product_content .product-info .product-images {
+    margin: auto;
+  }
+  .product_container .product_content .product-info .product-images .image-slider .slick-list .slick-slide div img {
+    max-height: 450px;
+  }
+  .product_container .product_content .product-info .product-details .characteristics-block .characteristic {
+    flex-wrap: wrap;
+  }
+  .product_container .product_content .product-info .product-details .characteristics-block .characteristic > div {
+    width: 100% !important;
+    font-size: 16px !important;
+  }
+  .product_container .product_content .product-info .product-details .characteristics-block .characteristic .body {
+    margin-left: 0;
+  }
+  .product_container .product_content .product-info .product-details .product-buy-block button {
+    width: 80%;
   }
   .shop_container.row {
     width: 95% !important;
@@ -3055,6 +3113,9 @@
   .simple-slider .slider-item .slider-item__bcg .slider-info .title {
     font-size: 14px;
     max-width: 265px;
+  }
+  .product_container .product_content .product-info .product-details {
+    margin: 0 12px;
   }
   .category .slick-slider .slick-arrow {
     width: 50px;
