--- a/src/styles/_orderComplere.scss
+++ b/src/styles/_orderComplere.scss
@@ -93,7 +93,7 @@
                         .image {
                             display: flex;
                             justify-content: center;
-                            flex-direction: column;
+                            align-items: center;
                             width: 30%;
                             background-color: #fff;
                             border: 1px solid #ebebeb;
