--- a/src/styles/_slider.scss
+++ b/src/styles/_slider.scss
@@ -3,6 +3,14 @@
         display: none !important;
     }
 
+    .slide-1 {
+        background-image: url('../assets/slider/slider-01.jpg');
+    }
+
+    .slide-2 {
+        background-image: url('../assets/slider/slider-02.jpg');
+    }
+
     .slider-item {
         background-repeat: no-repeat;
         background-position: center center;
