--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3246,6 +3246,29 @@
   .product_content.row {
     width: 90% !important;
   }
+  .checkout_container .checkout_content .checkout-block .form-block .new-existing-block .socials-btn-login {
+    display: flex;
+    align-items: center;
+  }
+  .checkout_container .checkout_content .checkout-block .form-block .new-existing-block .socials-btn-login .facebook {
+    margin-left: 0;
+  }
+  .checkout_container .checkout_content .checkout-block .form-block .new-existing-block .socials-btn-login .google {
+    margin-left: 8px;
+  }
+  .sidebar-window.basket .content__wrapper .content .card-items {
+    height: calc(100% - 280px);
+  }
+  .sidebar-window.basket .content__wrapper .content .basket-btn-block .checkout-options {
+    display: flex;
+    flex-direction: column;
+  }
+  .sidebar-window.basket .content__wrapper .content .basket-btn-block .checkout-options button {
+    width: 100% !important;
+  }
+  .sidebar-window.basket .content__wrapper .content .basket-btn-block .checkout-options .express-checkout {
+    margin: 6px 0 0;
+  }
   .complete_container .complete_content .order-details-block .order-products-list .products-list .item .image img {
     max-width: 80%;
   }
@@ -3660,6 +3683,8 @@ body.open {
   background-color: #f5f5f5;
   font-family: Roboto, sans-serif;
   color: #333333;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 .app {
