--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -50,6 +50,8 @@ body.open {
     background-color: #f5f5f5;
     font-family: Roboto, sans-serif;
     color: #333333;
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 .app {
