--- a/src/styles/_adaptive.scss
+++ b/src/styles/_adaptive.scss
@@ -628,14 +628,46 @@
     .product_content.row {
         width: 90% !important;
     }
+    .checkout_container .checkout_content .checkout-block .form-block .new-existing-block .socials-btn-login {
+        display: flex;
+        align-items: center;
+
+        .facebook {
+            margin-left: 0;
+        }
+
+        .google {
+            margin-left: 8px;
+        }
+    } 
+    .sidebar-window.basket .content__wrapper .content {
+        .card-items {
+            height: calc(100% - 280px);
+        }
+
+        .basket-btn-block .checkout-options {
+            display: flex;
+            flex-direction: column;
+
+            button {
+                width: 100% !important;
+            }
+
+            .express-checkout {
+                margin: 6px 0 0;
+            }
+        }
+    }
+
     .complete_container .complete_content .order-details-block {
         .order-products-list .products-list .item .image img {
             max-width: 80%;
         }
+
         .order-details-info .order-info .info-block {
             width: 100%;
         }
-    } 
+    }
 
     .product_container .product_content .product-info {
         .product-images {
