--- a/src/styles/_adaptive.scss
+++ b/src/styles/_adaptive.scss
@@ -278,6 +278,10 @@
         width: 750px !important;
     }
 
+    #root {
+        overflow: hidden;
+    }
+
     .complete_container .complete_content .order-details-block {
         flex-wrap: wrap;
 
